  the prototyped type that is given to the function.
- Extended the warning above to definitions of the form `T f() { ... }`,
  i.e. unprototyped but with no parameters.  (Before, the warning would
  trigger only if parameters were declared.)
- Check (and warn if requested) for arguments of struct/union types passed
  to a variable-argument function.
	
Bug fixes:
- RISC-V: fixed an error in the modeling of float32 <-> float64 conversions
  when the argument is a NaN (#428).
- x86: changed the compilation of `__builtin_fmin` and `__builtin_fmax`
  so that their NaN behavior is the one documented in the manual.
- Improved reproducibility of register allocation.
  (Compiling CompCert with two different OCaml versions could result
  in correct but different allocations.)
- Hardened the configure script against Cygwin installations that produce
  \r\n for end-of-lines (#434).

Coq development:
- Updated the Flocq library to version 4.1.
- Support for Coq 8.14.1, 8.15.0, 8.15.1.
- Minimal Coq version supported is now 8.12.0.


Release 3.10, 2021-11-19
========================

Major improvement:
- Bit fields in structs and unions are now handled in the
  formally-verified part of CompCert. (Before, they were being
  implemented through an unverified source-to-source translation.)
  The CompCert C and Clight languages provide abstract syntax for
  bit-field declarations and formal semantics for bit-field accesses.
  The translation of bit-field accesses to bit manipulations is
  performed in the Cshmgen pass and proved correct.

Usability:
- The layout of bit-fields in memory now follows the ELF ABI
  algorithm, improving ABI compatibility for the CompCert target
  platforms that use ELF.
- Handle the `# 0` line directive generated by some C preprocessors (#398).
- Un-define the `__SIZEOF_INT128__` macro that is predefined by some C
  preprocessors (#419).
- macOS assembler: use `##` instead of `#` to delimit comments (#399).

ISO C conformance: